# law-agent

./: .env.example  README.md  pyproject.toml
data/batch/: input_batch.jsonl  input_id.txt  output_batch.jsonl
data/embeddings/: index.pkl
data/raw/: 마약류불법거래방지에관한특례법.json  벌금미납자의사회봉사집행에관한특례법.json  부정수표단속법.json  소송촉진등에관한특례법.json  특정범죄가중처벌등에관한법률.json  폭력행위등처벌에관한법률.json  형사소송법.json
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: collect_and_parse_laws.py  create_batch_upload.py  evaluate_batch_results.py  process_documents_and_embed.py  test_integrated_workflow.py
scripts/shell/: eval_result.sh  make_batch.sh  run_script_full.sh
scripts/shell/data/embeddings/: index.pkl
scripts/shell/data/raw/: 도로교통법.json  형법.json
src/agent/: rag_retriever.py  workflow.py
src/data_collector/: data_parser.py  web_scraper.py
src/evaluation/: kmmlu_evaluator.py
src/vector_db/: document_processor.py  embeddings.py
