[project]
name = "law-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "joonavel",email = "joonavel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=1.93.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "unstructured (>=0.18.3,<0.19.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langgraph (>=0.5.1,<0.6.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]

[tool.poetry]
packages = [
    {include = "data_collector", from = "src"},
    {include = "evaluation", from = "src"},
    {include = "agent", from = "src"},
    {include = "vector_db", from = "src"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
